@@ -18,7 +18,7 @@
 BEGIN_C_DECLORATION
 Grid *gridThrash(Grid *g );
 Grid *gridRemoveAllNodes(Grid *g );
-Grid *gridAdapt(Grid *g, double minLength, double maxLength, GridBool project );
+Grid *gridAdapt(Grid *g, double minLength, double maxLength );
 int gridSplitEdge(Grid *g, int n0, int n1 );
 int gridSplitEdgeAt(Grid *g, Queue *q, int n0, int n1, 
 		    double newX, double newY, double newZ);
